# ePaper54L

./: .gitignore  README.md  ppk2-nRF54L-PAwR.ppk2
PAwR_mosaic/: .gitignore
PAwR_mosaic/app/: prj.conf
app/: CMakeLists.txt  prj.conf
bleapp/: lvgl_image_converter.py
esl_central_adv/: CMakeLists.txt
esl_central_adv/src/: main.c
esl_peripheral_sync/: .clangd  CMakeLists.txt  Kconfig  prj-minimal.conf  prj.conf
firmware/esl_peripheral_sync/: .clangd  CMakeLists.txt  Kconfig  prj-minimal.conf  prj.conf  west.yml
firmware/esl_peripheral_sync/boards/hlord2000/nrf54l15esl/: board.cmake  nrf54l15_cpuapp_common.dtsi  nrf54l15esl_nrf54l15-common.dtsi  nrf54l15esl_nrf54l15_cpuapp.dts  nrf54l15esl_nrf54l15_cpuflpr.yaml
firmware/esl_peripheral_sync/boards/hlord2000/nrf54l15esl_rev_a/: nrf54l15esl_rev_a_nrf54l15-common.dtsi
firmware/esl_peripheral_sync/include/: display_manager.h  images.h  messages.h  nametag.h  routes.h  state_manager.h  ui_manager.h
firmware/esl_peripheral_sync/src/: buttons.c  display.c  display_manager.c  environmental_sensor.c  input_manager.c  peripheral_sync.c  state_manager.c  temp_humidity_sensor.c  ui_manager.c
firmware/esl_peripheral_sync/src/images/: boston.c  nordic.c  philadelphia.c  sanjose.c  trondheim.c
firmware/esl_peripheral_sync/src/routes/: boot.c  config.c  nametag.c
hardware/: fp-lib-table  nRF54L_ePaper.kicad_pcb  nRF54L_ePaper.kicad_pro  nRF54L_ePaper.kicad_sch  sym-lib-table
nRF54L_ePaper/: fp-info-cache  fp-lib-table  nRF54L_ePaper.kicad_pcb  nRF54L_ePaper.kicad_prl  nRF54L_ePaper.kicad_pro  nRF54L_ePaper.step
(+101 files in other folders)
